<resources>
    <string name="app_name">PLDroidPlayerDemo</string>
    <string name="action_settings">Settings</string>

    <string name="choose_ok">OK</string>
    <string name="input_title">Input Url:</string>
    <string name="back_title">BACK</string>
    <string name="change_title">Change</string>
    <string name="buffering">Buffering</string>
    <string name="title_activity_audio_player">AudioPlayerActivity</string>
    <string name="choose_video">Video</string>
    <string name="choose_audio">Audio</string>

    <string name="live_streaming">直播</string>
    <string name="playback">点播</string>

    <string name="play_setting">播放设置</string>
    <string name="decode_config">解码配置</string>
    <string name="sw_decode">软解</string>
    <string name="hw_decode">硬解</string>
    <string name="auto_decode">自动</string>

    <string name="cache">离线缓存（mp4点播）</string>
    <string name="cache_file_name_encode">离线文件名加密</string>
    <string name="loop">循环播放（点播）</string>
    <string name="vcallback">视频数据回调</string>
    <string name="acallback">音频数据回调</string>
    <string name="disable_log">关闭日志</string>

    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>

    <string name="pls_choose_activity">[请选择测试的播放接口]:</string>
    <string name="pls_choose_videopath">[输入或选择视频地址]:</string>
    <string name="pls_choose_setting">[请选择播放配置]:</string>
    <string name="input_video_path">手动输入测试视频地址</string>
    <string name="btn_local_file">本地</string>
    <string name="btn_scan_Qrcode">扫码</string>
    <string name="btn_play_setting">播放配置</string>
    <string name="btn_click_play">播放</string>
    <string name="btn_click_list">列表</string>

    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_stop">停止</string>
    <string name="start_pos">开始位置</string>

</resources>
