<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FileList">
    <EditText
        android:id="@+id/input_url"
        android:hint="@string/input_title"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_video"
        android:text="@string/choose_video"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_audio"
        android:text="@string/choose_audio"
        android:layout_marginTop="100dp"
        android:layout_toRightOf="@id/btn_video"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fileListView"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:choiceMode="singleChoice"/>

</RelativeLayout>